--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^4.6.2",
+    "image-webpack-loader": "^8.1.0",
     "jquery": "^3.7.1"
   }
 }
