--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "webpack": "^5.102.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "^5.2.2",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
